# smiles-parser

./: .gitignore  .lycheeignore  Cargo.toml  README.md
.cargo/: mutants.toml
.github/workflows/: links.yml  mutants.yml  rust.yml  security.yml
benches/: explicit_hydrogens.rs  ring_membership.rs  smiles_bench.rs
docs/: smiles.md
fuzz/: CANONICALIZATION_SEEDS.md  Cargo.toml  run.sh
fuzz/corpus/canonicalization/: seed-aromatic-imidazole  seed-basic-disconnected  seed-basic-isotope-bracket  seed-invalid-unclosed-bracket  seed-invalid-unclosed-ring  seed-regression-partial-diagnostics  seed-regression-phosphorus-wildcard  seed-regression-tetrahedral-index  seed-stereo-alkene-e  seed-stereo-alkene-z  seed-stereo-disconnected-ring-closure  seed-stereo-nontetrahedral  seed-stereo-square-planar  seed-stereo-tetrahedral  seed-wildcard-aromatic-triangle
fuzz/fuzz_targets/: aromaticity_kekulization_roundtrip.rs  canonicalization.rs  fuzz_target_1.rs  rooted_render.rs  roundtrip.rs
src/: atom.rs  atom_node.rs  atom_symbol.rs  bond.rs  datasets.rs  errors.rs  lib.rs  parser.rs  ring_num.rs  smiles.rs  token.rs  unbracketed.rs
src/atom/: atom_node.rs  atom_symbol.rs  mod.rs  unbracketed.rs
src/atom/bracketed/: charge.rs  chirality.rs  hydrogen_count.rs  mod.rs
src/bond/: bond_edge.rs  mod.rs  ring_num.rs
src/bracketed/: bracket_atom.rs  charge.rs  chirality.rs  hydrogen_count.rs  mod.rs
src/parser/: mod.rs  smiles_parser.rs  token_iter.rs
src/smiles/: aromaticity.rs  atom_environment.rs  branches.rs  canonicalization.rs  connected_components.rs  double_bond_stereo.rs  emitter.rs  fragment.rs  from_str.rs  from_string.rs  geometric_traits_impl.rs  implicit_hydrogens.rs  invariants.rs  kekulization.rs  mces.rs  mod.rs  molecular_formula.rs  neighbors.rs  rdkit_symm_sssr.rs  refinement.rs  render_plan.rs  roots.rs  smiles_to_string.rs  spanning_tree.rs  stereo.rs  symmetry.rs  to_smiles.rs  vistor_trait.rs
src/smiles/aromaticity/: rdkit_default.rs
src/smiles/canonicalization/: components.rs  state.rs  stereo_normalization.rs  support.rs  tests.rs
src/smiles/canonicalization/stereo_normalization/: chirality.rs  directional_bonds.rs  preparation.rs
src/smiles/canonicalization/support/: common.rs  invariants.rs  mod.rs
src/smiles/canonicalization/tests/: exact_and_rewrite.rs  mod.rs  regressions.rs  stereo_distinctions.rs
src/traversal/: mod.rs  render_visitor.rs  visitor_trait.rs  walker.rs
tests/: test_aromatic_bond_order_canonicalization.rs  test_aromaticity_perception_perf.rs  test_aromatics.rs  test_atom_environment.rs  test_canonicalization_aromatic.rs  test_canonicalization_basic.rs  test_canonicalization_stereo.rs  test_connected_components.rs  test_dataset_corpus_parsing.rs  test_edge_cases_from_rdkit.rs  test_fragment.rs  test_implicit_hydrogens.rs  test_kekulization.rs  test_molecular_formula_conversion.rs  test_non_isomeric.rs  test_pubchem.rs  test_pubchem_aromaticity_corpus.rs  test_pubchem_canonicalization.rs  test_pubchem_non_aromaticity_corpus.rs  test_rdkit_parser_rejects.rs  test_rdkit_sanitization_rejects.rs  test_rendering.rs  test_rooted_environment_smiles.rs  test_rooted_render.rs  test_smiles_parser.rs  test_square_brackets.rs
tests/canonicalization_common/: mod.rs
tests/common/: canonicalization.rs  implicit_hydrogen_cases.rs  mod.rs
tests/fixtures/: benchmark_smiles_corpus.txt
tests/fixtures/aromaticity/corpus/: pubchem_aromaticity_cases.json  pubchem_benchmark_cases.json
tests/implicit_hydrogen_common/: mod.rs
