[package]
name = "smiles-parser"
version = "0.1.0"
edition = "2024"
authors = ["Earth Metabolome Initiative"]
license = "MIT"
repository = "https://github.com/earth-metabolome-initiative/smiles-parser"
description = "A SMILES parser in Rust"
readme = "README.md"

[features]
default = []
fuzzing = []
datasets = ["dep:flate2", "dep:indicatif", "dep:reqwest"]

[dependencies]
elements_rs = "0.2.3"
flate2 = { version = "1.1.9", optional = true, default-features = false, features = ["rust_backend"] }
geometric-traits = { git = "https://github.com/earth-metabolome-initiative/geometric-traits", branch = "main", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.16.1", default-features = false, features = ["alloc", "default-hasher", "inline-more"] }
indicatif = { version = "0.18.4", optional = true }
reqwest = { version = "0.12.12", optional = true, default-features = false, features = ["blocking", "rustls-tls"] }
smallvec = { version = "1.15.1", default-features = false, features = ["union"] }
thiserror = { version = "2.0.18", default-features = false }


[lints.rust]
missing_docs = "forbid"
unused_macro_rules = "forbid"
unconditional_recursion = "forbid"
unreachable_patterns = "forbid"
unused_import_braces = "forbid"
unused_must_use = "forbid"
deprecated = "deny"

[lints.rustdoc]
broken_intra_doc_links = "forbid"
bare_urls = "forbid"
invalid_codeblock_attributes = "forbid"
invalid_html_tags = "forbid"
missing_crate_level_docs = "forbid"
unescaped_backticks = "forbid"
redundant_explicit_links = "forbid"
invalid_rust_codeblocks = "forbid"

[lints.clippy]
unreadable_literal = "allow"
missing_panics_doc = "allow"
new_ret_no_self = "allow"
should_panic_without_expect = "allow"
doc_markdown = "allow"
clone_on_copy = "forbid"
pedantic = { level = "deny", priority = -1 }


[profile.release]
lto = "thin"
codegen-units = 1
[dev-dependencies]
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }
flate2 = "1.1.9"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[[bench]]
name = "explicit_hydrogens"
harness = false
