[package]
name = "smiles-parser-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.smiles-parser]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "aromaticity_kekulization_roundtrip"
path = "fuzz_targets/aromaticity_kekulization_roundtrip.rs"
test = false
doc = false
bench = false
