[package]
name = "smiles-parser-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.smiles-parser]
path = ".."
features = ["fuzzing"]

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "aromaticity_kekulization_roundtrip"
path = "fuzz_targets/aromaticity_kekulization_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "canonicalization"
path = "fuzz_targets/canonicalization.rs"
test = false
doc = false
bench = false
